# avenOS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  biome.json  commitlint.config.cjs  package.json  svelte.config.js  vite.config.ts
app/src-tauri/: .gitignore  Cargo.toml  Info.ios.plist  Info.plist  build.rs  tauri.conf.json  tauri.ios.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json  desktop-peer.json  vault-webview.json  vibe-sandbox.json
app/src-tauri/ios-template/: README.md  aven-os-app_iOS.entitlements
app/src-tauri/profiles/: README.md
app/src-tauri/resources/moss-tts-nano/: tokenizer.json
app/src-tauri/src/: agent_sidecar.rs  asr.rs  avendb_auth.rs  biscuit_resolver.rs  crypto.rs  demo_mesh.rs  embed_model.rs  identity_acc.rs  identity_sync.rs  jazz_auth.rs  lib.rs  llm.rs  log_ring.rs  main.rs  mesh.rs  network.rs  peer_catchup.rs  peer_mesh_state.rs  peer_sync_gate.rs  peers.rs  schema_manifest.rs  schema_migrations.rs  signers.rs  spark_acc.rs  spark_sync.rs  tts.rs
app/src-tauri/src/avendb/: brain_ipc.rs  caps_ipc.rs  conn.rs  crud_ipc.rs  drain.rs  engine.rs  mesh_ui.rs  mod.rs  runtime.rs  ui_drain.rs
app/src-tauri/src/intent_runtime/: ipc.rs  manager.rs  mod.rs  types.rs
app/src-tauri/src/jazz/: caps_ipc.rs  conn.rs  crud_ipc.rs  drain.rs  jazz_engine.rs  mesh_ui.rs  mod.rs  runtime.rs  ui_drain.rs
lib/app/src-tauri/: .gitignore  Cargo.toml  Entitlements-appstore.plist  Info.ios.plist  tauri.conf.json
lib/app/src-tauri/capabilities/: default.json  desktop-peer.json
lib/app/src-tauri/icons/: icon.icns
lib/app/src-tauri/ios-template/: README.md  aven-os-app_iOS.entitlements
lib/app/src-tauri/profiles/: README.md
libs/aven-ai/: Cargo.toml
libs/aven-ai/examples/: asr_transcribe.rs  llama_spike.rs  llm_tool.rs  tts_synth.rs
libs/aven-ai/src/: download.rs  embed.rs  lib.rs  llama.rs  llm.rs  onnx.rs  stt.rs  tinfoil.rs  tts.rs
libs/aven-brain/: Cargo.toml
libs/aven-brain/src/: brain.rs  embedder.rs  extractor.rs  gemma.rs  lib.rs  schema.rs  sealer.rs
libs/aven-brain/tests/: frontier_convergence.rs  frontier_incremental.rs  frontier_zero_decrypt.rs
libs/aven-caps/: Cargo.toml
libs/aven-caps/src/: caps.rs  crypto.rs  lib.rs  ownership.rs
libs/aven-db/: Cargo.toml  UPSTREAM.md
libs/aven-db/src/: avenos_client.rs  capability.rs  delivery_ledger.rs  dev_transport.rs  did_key.rs  frontier.rs  frontier_epoch.rs  lib.rs  manifest.rs  metadata.rs  peer_transport.rs  row_format.rs  runtime_tokio.rs  sync_authorizer.rs  sync_targets.rs  sync_transport.rs
libs/aven-db/tests/: capability_gate.rs  create_checked.rs  create_owned_crud.rs  delete_frontier_repro.rs  dev_transport.rs  frontier_reconcile.rs  loopback_transport.rs  peer_transport_codec.rs  sync_core.rs  sync_transport_codec.rs
libs/aven-p2p/: Cargo.toml  UPSTREAM.md
libs/aven-p2p/examples/: swarm_smoke.rs  ws_probe.rs
libs/aven-p2p/src/: challenge.rs  error.rs  lib.rs  peer_discovery.rs  peer_info.rs  swarm.rs  tls.rs  transport.rs  util.rs  ws_client.rs
libs/aven-p2p/tests/: coordinator_udx_addr.rs  invite_pair_token.rs  pairing_dominant_redial.rs  pairing_server_registration.rs  relay_only_single_candidate.rs  relay_reflexive_return_path.rs  remote_relay_probe.rs  server_handshake_relay_half.rs  single_socket_transport.rs  two_node_discovery.rs
libs/aven-relay/: Cargo.toml  Dockerfile  README.md  fly.toml  start-fly.ts
libs/aven-relay/src/: main.rs  relay_host.rs
libs/aven-server/: Cargo.toml  Dockerfile  fly.toml
libs/aven-server/src/: aven_ceo.rs  main.rs  ws_server.rs
libs/tauri-plugin-p2p/: Cargo.toml  build.rs
libs/tauri-plugin-p2p/permissions/: default.toml
libs/tauri-plugin-p2p/src/: commands_macos.rs  commands_stub.rs  hyperswarm_groove_bridge.rs  lib.rs  pairing.rs  pairing_invite.rs  pairing_transport.rs  peer_connect_ui.rs  peer_link.rs  peer_session.rs  transport.rs
libs/tauri-plugin-p2p/tests/: link_phase_authority.rs  live_link_integration.rs  pairing_policy.rs  peer_link_coordinator.rs  relay_only_policy.rs  swarm_connecting_authority.rs
libs/tauri-plugin-sandbox-quickjs/: Cargo.toml  build.rs
libs/tauri-plugin-sandbox-quickjs/permissions/: default.toml
libs/tauri-plugin-sandbox-quickjs/src/: commands.rs  lib.rs  session.rs
libs/tauri-plugin-self/: Cargo.toml  README.md  build.rs
libs/tauri-plugin-self/permissions/: default.toml  vault-webview-self.toml
libs/tauri-plugin-self/src/: commands.rs  derive.rs  dev_insecure.rs  did.rs  lib.rs  network.rs  paths.rs  stronghold_vault.rs  unlock.rs  vault.rs  vault_commands.rs  vault_settings.rs  vault_settings_commands.rs
libs/tauri-plugin-self/swift-lib/: Package.resolved  Package.swift
libs/tauri-plugin-vault/: Cargo.toml  build.rs
libs/tauri-plugin-vault/permissions/: default.toml
libs/tauri-plugin-vault/src/: commands.rs  lib.rs
projects/aven-p2p-signal/: Cargo.toml  Dockerfile  fly.toml  start-fly.ts
projects/aven-p2p-signal/src/: main.rs  relay_host.rs
projects/tauri-plugin-peer/: Cargo.toml  build.rs
projects/tauri-plugin-peer/permissions/: default.toml
projects/tauri-plugin-peer/src/: commands_macos.rs  commands_stub.rs  did.rs  heal_scheduler.rs  hyperswarm_groove_bridge.rs  lib.rs  live_link.rs  network_path.rs  pairing.rs  pairing_label.rs  peer_connect_ui.rs  peer_link.rs  peer_reconnect.rs  peer_util.rs  transport_rank.rs
projects/tauri-plugin-peer/swift-lib/: Package.swift
projects/tauri-plugin-peer/tests/: link_phase_authority.rs  live_link_integration.rs  pairing_fsm.rs  peer_link_coordinator.rs
projects/tauri-plugin-self/: Cargo.toml  README.md  build.rs
projects/tauri-plugin-self/permissions/: default.toml
projects/tauri-plugin-self/src/: commands.rs  derive.rs  dev_insecure.rs  did.rs  lib.rs  paths.rs  state.rs  vault.rs  vault_commands.rs
projects/tauri-plugin-self/swift-lib/: Package.swift
scripts/remote-relay-dht-smoke/: Cargo.toml  blind_connect.rs  main.rs  node-connect-relay.mjs
tools/avenos-schema-hash/: Cargo.toml
tools/avenos-schema-hash/src/: main.rs
(+2748 files in other folders)
