[profile.dev.package.scrypt]
opt-level = 3

# Release/store builds don't benefit from incremental (no iterative recompiles),
# but the repo-wide `[build] incremental = true` (.cargo/config.toml, for fast dev)
# would otherwise leak into them — that produced ~7.5 GB of dead incremental data
# under the iOS/macOS release target triples. Turn it off for release explicitly.
[profile.release]
incremental = false

[package]
name = "aven-os-app"
version = "0.0.1"
description = "Aven OS desktop shell"
authors = ["Aven"]
edition = "2021"
rust-version = "1.93"
[lib]
name = "aven_os_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aven-os-app"
path = "src/main.rs"

[features]
# On-device voice-note transcription (Gemma 4 E4B) is ON by default, so the
# normal `bun run dev:app` / `bun run release:app` flows ship the real model and
# trigger the first-run weights download. Enabling it pulls in the heavy
# `mistralrs` inference crate (~400MB+ build, longer first compile). Build with
# `--no-default-features` to get the light stub build (CI / quick checks).
default = ["local-asr"]
local-asr = ["dep:mistralrs", "dep:hf-hub"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
# On-device ASR engine — optional, only compiled with the `local-asr` feature.
mistralrs = { version = "0.8", optional = true }
# Weights download with byte-level progress; features matched to mistralrs-core
# so cargo unifies them (no extra build). Only with `local-asr`.
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "tokio", "rustls-tls"], optional = true }
groove = { package = "aven-db", version = "0.0.1", default-features = false, features = ["client-p2p"] }
aven-caps = { path = "../../libs/aven-caps" }
aven-p2p = { path = "../../libs/aven-p2p" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri-plugin-self = { path = "../../libs/tauri-plugin-self" }
tauri-plugin-vault = { path = "../../libs/tauri-plugin-vault" }
tauri-plugin-sandbox-quickjs = { path = "../../libs/tauri-plugin-sandbox-quickjs" }
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
hex = "0.4"
p256 = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
biscuit-auth = { version = "6", features = ["datalog-macro"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
hkdf = "0.12"
multibase = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }
env_logger = "0.11.10"
tracing-log = "0.2.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = { version = "0.2", features = ["logger"] }
# Apple GPU backend — required for the AFQ4 (affine) quant we load on Apple
# Silicon / iOS. Feature is unioned with the base `mistralrs` dep above.
mistralrs = { version = "0.8", optional = true, features = ["metal"] }

# Vendored aven-db (jazz2 alpha.50) with AvenOS P2P patches:
# `QueryManager` write paths used to `.map_err(|_| QueryError::ObjectNotFound(id))`,
# which collapses BranchNotFound / ParentNotFound / StorageError into a single
# misleading "ObjectNotFound" string. The vendored copy preserves the real
# upstream error via `QueryError::InternalError(format!("{:?}", e))` so we can
# diagnose the "row visible on read, write fails" failure mode. Pin to local
# path to keep dev iteration fast; review the diff before bumping versions.
[patch.crates-io]
aven-db = { path = "../../libs/aven-db" }
