[package]
name = "aven-ai"
version = "0.0.1"
edition = "2021"
description = "AvenOS on-device AI core (Tauri-free): speech-to-text via sherpa-onnx (Parakeet), model download/cache primitives, and a future on-device LLM path. Shared by the app."
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = []
# On-device speech-to-text via sherpa-onnx. The `sherpa-onnx-sys` build script
# downloads a prebuilt static sherpa-onnx + onnxruntime (no CMake needed).
stt = ["dep:sherpa-onnx", "dep:ureq", "dep:tar", "dep:bzip2"]
# On-device text LLM (LFM2.5-8B-A1B ONNX) via onnxruntime (`ort`). `load-dynamic`
# loads a bundled `libonnxruntime` at runtime so it never statically links a
# second onnxruntime alongside the one `sherpa-onnx-sys` embeds (no symbol clash),
# and stays App-Store/TestFlight-safe (the dylib ships signed in the app bundle;
# only model *weights* download at first run).
llm = ["dep:ort", "dep:half", "dep:tokenizers", "dep:ureq", "dep:serde_json", "dep:log"]
# On-device text embeddings (EmbeddingGemma-300m ONNX) via onnxruntime (`ort`,
# load-dynamic — same bundled dylib as `llm`) + HF tokenizer. Encoder counterpart
# to the generation paths.
embed = ["dep:ort", "dep:tokenizers", "dep:log"]
# On-device LLM via llama.cpp (LFM2.5-1.2B GGUF). Statically linked (no dylib to bundle or
# sign), Metal on Apple. Same GGUF runs on macOS AND iOS. Replaces the ONNX `llm` path.
llama = ["dep:llama-cpp-2", "dep:llama-cpp-sys-2", "dep:ureq", "dep:serde_json", "dep:log"]
# On-device text-to-speech (MOSS-TTS-Nano ONNX) via onnxruntime (`ort`). Reuses the
# shared `download` module + the ort `load-dynamic` bundled-dylib path; the `onnx`
# module supplies the ort KV-cache/init helpers. Streams 48 kHz PCM frames.
tts = ["dep:ort", "dep:half", "dep:tokenizers", "dep:ureq", "dep:serde", "dep:serde_json", "dep:log"]
# Confidential CLOUD chat via the Tinfoil enclave SDK (OpenAI-compatible chat with tool
# calling; enclave attestation built in). Key comes from `TINFOIL_API_KEY` in the env —
# local-dev only for now, no proxy/key storage. NOTE: the `tinfoil` crate is git-only
# (not on crates.io) and AGPL-3.0 — revisit the license before shipping (board 0021).
tinfoil = ["dep:tinfoil", "dep:tokio", "dep:serde", "dep:serde_json", "dep:log"]

[dependencies]
# STT engine + first-run model download (tar.bz2 from GitHub releases) + extract.
sherpa-onnx = { version = "1.13", optional = true }
ureq = { version = "2", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }
# LLM engine: onnxruntime bindings (runtime-loaded dylib) + HF tokenizer + JSON.
# `half` → f16 cache/logit tensors (the q4f16 export is fp16); `std` for the std runtime.
# `api-24` matches ort's own default API level (its EP modules reference that API
# surface unconditionally); the bundled onnxruntime must be ≥ the matching release.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "half", "load-dynamic", "api-24"] }
half = { version = "2", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
log = { version = "0.4", optional = true }
# On-device LLM engine: llama.cpp (GGUF). Built static from source (in the executable — no
# dylib), so the App-Store dylib codesign/strip saga goes away on both macOS and iOS.
llama-cpp-2 = { version = "0.1.146", optional = true }
# Raw bindings (same build as llama-cpp-2 above) — only for `llama_log_set`/`ggml_log_set`
# to silence llama.cpp's verbose INFO logging via a C callback.
llama-cpp-sys-2 = { version = "0.1.146", optional = true }
# Tinfoil enclave client (wraps async-openai; verifies enclave attestation on connect).
# Git-only: the crate is not published on crates.io.
tinfoil = { git = "https://github.com/tinfoilsh/tinfoil-rs", optional = true }
# Async client cache for the `tinfoil` path (the SDK is async; Tauri supplies the runtime).
tokio = { version = "1", optional = true, default-features = false, features = ["sync"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
# Apple GPU backend (Metal) for the llama.cpp LLM path; Metal shaders embed into the binary.
llama-cpp-2 = { version = "0.1.146", optional = true, features = ["metal"] }
llama-cpp-sys-2 = { version = "0.1.146", optional = true, features = ["metal"] }

[dev-dependencies]
# WAV writer for the `tts_synth` example (CLI MOSS-TTS → wav, used by the video-edit skill).
hound = "3"

# CLI: synthesize a line of text to a wav with MOSS-TTS-Nano (reuses the `tts` engine).
#   cargo run --release --example tts_synth --features tts -- "text" out.wav
[[example]]
name = "tts_synth"
required-features = ["tts"]

# CLI: smoke-test LFM2 tool calling against a local GGUF.
#   cargo run --example llm_tool --features llama -- <model.gguf> "Zeig mir die Settings."
[[example]]
name = "llm_tool"
required-features = ["llama"]

# CLI: word-level speech-to-text with our own Parakeet STT (reuses the `stt` engine).
#   cargo run --release --example asr_transcribe --features stt -- in.wav out.json
[[example]]
name = "asr_transcribe"
required-features = ["stt"]
