[package]
name = "aven-brain"
version = "26.6.1-next.15"
edition = "2021"
description = "AvenOS local-first AI memory brain — memories, entities, facts, relations over aven-db (CRDT, vector + BM25 retrieval). One brain per identity."
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[features]
default = []
# Real on-device models: EmbeddingGemma-300m (ONNX) via aven-ai. Pulls ort + tokio.
# The default build uses StubEmbedder and stays dependency-light.
models = ["dep:aven-ai", "dep:tokio", "dep:log"]

[dependencies]
aven-db = { path = "../aven-db", features = ["client-p2p"] }
aven-caps = { path = "../aven-caps" }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = "1"
aven-ai = { path = "../aven-ai", optional = true, features = ["embed"] }
tokio = { version = "1", optional = true, features = ["rt"] }
log = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
