[package]
name = "aven-db"
version = "0.0.1"
edition = "2024"
description = "avenDB — AvenOS local-first DB core (CRDT, vector + BM25, RocksDB). Import as `aven_db`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/garden-co/jazz2"

[lib]
path = "src/lib.rs"

[features]
default = []
test-utils = []
rocksdb = ["dep:rocksdb"]
runtime-tokio = ["dep:tokio"]
peer-transport = ["dep:bincode", "dep:async-trait"]
client-p2p = [
    "runtime-tokio",
    "rocksdb",
    "peer-transport",
    "dep:thiserror",
    "dep:tokio",
]

[dependencies]
futures = "0.3"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
blake3 = "1"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
postcard = { version = "1", features = ["alloc"] }
jsonschema = { version = "0.42", default-features = false }
internment = "0.8"
smallvec = { version = "1.11", features = ["serde"] }
smolset = "1.3"
web-time = "1.1"
small-map = "0.1"
bitvec = "1.0"
ahash = "0.8"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
multibase = "0.9"
lz4_flex = "0.13.1"

tokio = { version = "1", features = ["full"], optional = true }
rocksdb = { package = "rust-rocksdb", version = "0.48.0", default-features = false, features = [
    "lz4",
    "zstd",
], optional = true }
thiserror = { version = "1", optional = true }
bincode = { version = "2", features = ["serde"], optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["test-util", "full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[test]]
name = "create_owned_crud"
required-features = ["client-p2p"]

[[test]]
name = "sync_transport_codec"
required-features = ["client-p2p"]

[[test]]
name = "capability_gate"
required-features = ["client-p2p"]

[[test]]
name = "loopback_transport"
required-features = ["client-p2p"]
