[package]
name = "aven-p2p"
version = "26.6.1-next.5"
edition = "2021"
description = "AvenOS sync transport — authenticated TLS ServerSyncTransport + ServerListener (N-client fan-out) over the avenDB SyncTransport seam."
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
aven-db = { path = "../aven-db", features = ["client-p2p"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rcgen = "0.13"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
