[package]
name = "aven-relay"
version = "0.1.0"
edition = "2021"
publish = false
description = "Central HyperDHT bootstrap + blind-relay for AvenOS P2P discovery."

[[bin]]
name = "aven-relay-dht"
path = "src/main.rs"

[dependencies]
libudx = "1.3.1"
peeroxide-dht = "1.3.1"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
peeroxide-dht = { path = "../../third_party/peeroxide-dht" }
