[package]
name = "aven-server"
version = "0.0.1"
edition = "2021"
description = "AvenOS aven-server mini — headless, stateless rendezvous/relay over an authenticated TLS sync transport (one fly deploy)."
license = "MIT OR Apache-2.0"

[[bin]]
name = "aven-server"
path = "src/main.rs"

[dependencies]
groove = { package = "aven-db", path = "../aven-db", features = ["client-p2p"] }
aven-p2p = { path = "../aven-p2p" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
