[package]
name = "tauri-plugin-sandbox-quickjs"
version = "26.6.1-next.11"
description = "Tauri plugin: QuickJS sandbox for @avenos/aven-ui fixture logic."
authors = ["Aven"]
license = "MIT OR Apache-2.0"
edition = "2021"
links = "tauri-plugin-sandbox-quickjs"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }

# Desktop: prebuilt QuickJS bindings (fast builds).
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
rquickjs = "0.8"

# Mobile: compile QuickJS + generate FFI bindings for the target at build time.
[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
rquickjs = { version = "0.8", features = ["bindgen"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
